// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BuildPullRequestBadge /> tests snapshot test 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="greyBox"
    >
      <span
        class="ellipsis sourceRepo"
      >
        sourceRepo1
      </span>
      <span
        class="greyBoxDelimiter"
      />
      <span
        class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon"
        icon="git-branch"
      >
        <svg
          data-icon="git-branch"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <desc>
            git-branch
          </desc>
          <path
            d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="ellipsis sourceBranch"
      >
        sourceBranch
      </span>
    </span>
    <span
      class="bp3-icon bp3-icon-arrow-right StyledProps--main sourceTargetArrow"
      icon="arrow-right"
    >
      <svg
        data-icon="arrow-right"
        height="12"
        viewBox="0 0 16 16"
        width="12"
      >
        <desc>
          arrow-right
        </desc>
        <path
          d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="greyBox"
    >
      <span
        class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon"
        icon="git-branch"
      >
        <svg
          data-icon="git-branch"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <desc>
            git-branch
          </desc>
          <path
            d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="ellipsis targetBranch"
      >
        targetBranch
      </span>
    </span>
  </div>
</div>
`;

exports[`<BuildPullRequestBadge /> tests snapshot test 2`] = `
<div>
  <div
    class="main"
  >
    <span
      class="greyBox"
    >
      <span
        class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon"
        icon="git-branch"
      >
        <svg
          data-icon="git-branch"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <desc>
            git-branch
          </desc>
          <path
            d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="ellipsis sourceBranch"
      >
        sourceBranch
      </span>
    </span>
    <span
      class="bp3-icon bp3-icon-arrow-right StyledProps--main sourceTargetArrow"
      icon="arrow-right"
    >
      <svg
        data-icon="arrow-right"
        height="12"
        viewBox="0 0 16 16"
        width="12"
      >
        <desc>
          arrow-right
        </desc>
        <path
          d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="greyBox"
    >
      <span
        class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon"
        icon="git-branch"
      >
        <svg
          data-icon="git-branch"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <desc>
            git-branch
          </desc>
          <path
            d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="ellipsis targetBranch"
      >
        targetBranch
      </span>
    </span>
  </div>
</div>
`;
